--- a/ReadMe
+++ b/ReadMe
@@ -1,3 +1,4 @@
 ## read me file
 1. to install packages in react (frontend)use thecommand - npm install
 2. to install packages in Dot.Net use command -dotnet add package (package name)
+3. to use database use link this sql command - 
