--- a/ReadMe
+++ b/ReadMe
@@ -2,3 +2,4 @@
 1. to install packages in react (frontend)use thecommand - npm install
 2. to install packages in Dot.Net use command -dotnet add package (package name)
 3. to use database use link this sql command - 
+![This is an image](https://myoctocat.com/assets/images/base-octocat.svg)
